--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-
-
-MONGODB_URI= "mongodb+srv://nithinjayanjasla:roottoor123@cluster0.wnvslc7.mongodb.net"
+MONGODB_URI=mongodb+srv://nithinjayanjasla:roottoor123@cluster0.wnvslc7.mongodb.net
+JWT_SECRET="secret#text"
+NODE_ENV ="development"
