backend seller productcontroller pending

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,11 @@
 MONGODB_URI=mongodb+srv://nithinjayanjasla:roottoor123@cluster0.wnvslc7.mongodb.net
 JWT_SECRET="secret#text"
 NODE_ENV ="development"
+#Admin credentials
+SELLER_EMAIL ='admin@example.com'
+SELLER_PASSWORD ='Admin@123'
+
+CLOUDINARY_CLOUD_NAME =" dpla5jt7o"
+CLOUDINARY_API_KEY= '964437693889531'
+CLOUDINARY_API_SECRET='lLr3gUjK9zQrIDtEE3Lt5gZfQ4w'
+
