--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-   "start": "node server/index.js",
-    "server": "nodemon server.js"
-  },
+  "start": "node server.js",
+  "server": "nodemon server.js"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
