--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
-  "scripts": {
-  "start": "node server.js",
-  "server": "nodemon server.js"
+ "scripts": {
+  "start": "node server.js"
 },
 
   "keywords": [],
