--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,10 @@
   "main": "server.js",
   "type": "module",
  "scripts": {
-  "start": "node server.js"
-},
+    "build": "npm install && npm install --prefix client && npm run build --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js"
+  },
 
   "keywords": [],
   "author": "",
